--- a/Products.html
+++ b/Products.html
@@ -23,7 +23,7 @@
           <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
                 <li class="nav-item"> 
-                    <a class="nav-link" href="Index.html">Home</a>
+                    <a class="nav-link" href="index.html">Home</a>
                   </li>
               <li class="nav-item">
                 <a class="nav-link active" aria-current="page" href="Products.html">Products</a>
